fixing card gap

--- a/docs/src/css/style.css
+++ b/docs/src/css/style.css
@@ -472,9 +472,9 @@ input:checked + .slider:before {
   justify-content: center;
   align-items: center;
 
-  gap: 2rem;
+  gap: 4rem;
   width: 100%;
-  padding-top: 1rem;
+  margin-top: 5rem;
 }
 
 .card {
@@ -1118,12 +1118,6 @@ ul.menu-active a {
 .dark .burger input:checked ~ span {
   background: #0f141a;
   transition: .2s linear;
-}
-
-.projects-list {
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-left: 0;
 }
 
 }
